--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "files": [
         "index.js",
         "LICENSE",
-        "css/**/*.scss",
         "dist/**/*",
         "js/**/*.js",
         "res/**/*.ico",
@@ -36,16 +35,13 @@
         "build-lib": "cross-env NODE_ENV=production webpack --mode production --config webpack-lib.config.js",
         "build-storybook": "cross-env NODE_ENV=development build-storybook -c .storybook -o storybook",
         "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js --mode development --watch --hot",
-        "lint": "npm run lint:base && npm run lint:stylelint",
-        "lint-fix": "npm run lint-fix:base && npm run lint-fix:stylelint",
+        "lint": "npm run lint:base",
+        "lint-fix": "npm run lint-fix:base",
         "lint-fix:base": "eslint \"./**/*.{js,vue}\" --fix",
-        "lint-fix:stylelint": "stylelint \"./**/*.{css,scss,vue}\" --fix",
         "lint:base": "eslint \"./**/*.{js,vue}\"",
-        "lint:stylelint": "stylelint \"./**/*.{css,scss,vue}\"",
         "prettier": "prettier \"./**/*.{js,vue,json}\" --write",
-        "pretty": "npm run prettier && npm run lint-fix && npm run svgo",
+        "pretty": "npm run prettier && npm run lint-fix",
         "storybook": "start-storybook -p 9001 -c .storybook",
-        "svgo": "svgo -r . --disable='removeDimensions,removeViewBox,minifyStyles'",
         "test": "npm run test:mocha && npm run test:vue",
         "test-debug": "cross-env NODE_ENV=development node --inspect node_modules/.bin/mochapack --webpack-config vue/test/webpack.config.js --require vue/test/setup.js vue/**/*.test.js",
         "test-watch:vue": "npm run test:vue -- --watch",
@@ -57,7 +53,6 @@
         "webpack": "webpack --config webpack.config.js"
     },
     "dependencies": {
-        "loaders.css": "^0.1.2",
         "vue": "^2.6.12",
         "vue-global-events": "^1.2.1",
         "yonius": "^0.7.2"
@@ -74,7 +69,6 @@
         "mochapack": "^2.0.6",
         "node-fetch": "^2.6.1",
         "null-loader": "^4.0.1",
-        "svgo": "^2.0.3",
         "url-loader": "^4.1.1",
         "uxf-webpack": "^0.8.2"
     },
