--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
         "build": "cross-env NODE_ENV=production webpack --mode production --config webpack.config.js",
         "build-dev": "cross-env NODE_ENV=development webpack --mode development --config webpack.config.js",
         "build-lib": "cross-env NODE_ENV=production webpack --mode production --config webpack-lib.config.js",
-        "build-storybook": "cross-env NODE_ENV=development build-storybook -c .storybook -o storybook",
         "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js --mode development --watch --hot",
         "lint": "npm run lint:base",
         "lint-fix": "npm run lint-fix:base",
@@ -41,14 +40,13 @@
         "lint:base": "eslint \"./**/*.{js,vue}\"",
         "prettier": "prettier \"./**/*.{js,vue,json}\" --write",
         "pretty": "npm run prettier && npm run lint-fix",
-        "storybook": "start-storybook -p 9001 -c .storybook",
         "test": "npm run test:mocha && npm run test:vue",
         "test-debug": "cross-env NODE_ENV=development node --inspect node_modules/.bin/mochapack --webpack-config vue/test/webpack.config.js --require vue/test/setup.js vue/**/*.test.js",
         "test-watch:vue": "npm run test:vue -- --watch",
         "test:mocha": "mocha --recursive test",
         "test:vue": "cross-env NODE_ENV=development mochapack --webpack-config vue/test/webpack.config.js --require vue/test/setup.js vue/test/**/*.test.js",
         "upgrade": "npx sort-package-json && ncu -u",
-        "vercel-build": "npm run build && npm run build-storybook",
+        "vercel-build": "npm run build",
         "watch": "cross-env NODE_ENV=development webpack --config webpack.config.js --mode development --watch",
         "webpack": "webpack --config webpack.config.js"
     },
@@ -58,10 +56,6 @@
         "yonius": "^0.7.2"
     },
     "devDependencies": {
-        "@storybook/addon-knobs": "^6.1.18",
-        "@storybook/addon-storysource": "^6.1.18",
-        "@storybook/source-loader": "^6.1.18",
-        "@storybook/vue": "^6.1.18",
         "@vue/test-utils": "^1.1.3",
         "jsdom": "^16.4.0",
         "jsdom-global": "^3.0.2",
