--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "build": "cross-env NODE_ENV=production webpack --mode production --config webpack.config.js",
         "build-dev": "cross-env NODE_ENV=development webpack --mode development --config webpack.config.js",
         "build-lib": "cross-env NODE_ENV=production webpack --mode production --config webpack-lib.config.js",
-        "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js --mode development --watch --hot",
+        "dev": "cross-env NODE_ENV=development webpack serve --config webpack.config.js --mode development --hot",
         "lint": "npm run lint:base",
         "lint-fix": "npm run lint-fix:base",
         "lint-fix:base": "eslint \"./**/*.{js,vue}\" --fix",
@@ -51,21 +51,52 @@
         "webpack": "webpack --config webpack.config.js"
     },
     "dependencies": {
-        "vue": "^2.6.12",
+        "vue": "^2.6.14",
         "vue-global-events": "^1.2.1",
         "vuex": "^3.6.2",
-        "yonius": "^0.7.2"
+        "yonius": "^0.11.5"
     },
     "devDependencies": {
-        "@vue/test-utils": "^1.1.3",
-        "jsdom": "^16.4.0",
+        "@vue/test-utils": "^1.3.0",
+        "jsdom": "^19.0.0",
         "jsdom-global": "^3.0.2",
-        "mocha": "^8.3.0",
-        "mochapack": "^2.0.6",
-        "node-fetch": "^2.6.1",
+        "mocha": "^9.2.0",
+        "mochapack": "^2.1.4",
+        "node-fetch": "^2.6.7",
         "null-loader": "^4.0.1",
         "url-loader": "^4.1.1",
-        "uxf-webpack": "^0.8.2"
+        "@babel/core": "^7.17.4",
+        "@babel/plugin-transform-runtime": "^7.17.0",
+        "@babel/preset-env": "^7.16.11",
+        "@babel/runtime": "^7.17.2",
+        "babel-loader": "^8.2.3",
+        "core-js": "^3.21.0",
+        "cross-env": "^7.0.3",
+        "css-loader": "^6.6.0",
+        "eslint": "^8.9.0",
+        "eslint-config-hive": "^0.5.3",
+        "eslint-webpack-plugin": "^3.1.1",
+        "html-webpack-plugin": "^5.5.0",
+        "npm-check-updates": "^12.3.0",
+        "postcss": "^8.4.6",
+        "postcss-html": "^1.3.0",
+        "prettier": "^2.5.1",
+        "prettier-config-hive": "^0.1.7",
+        "sass": "^1.49.7",
+        "sass-loader": "^12.6.0",
+        "sort-package-json": "^1.54.0",
+        "style-loader": "^3.3.1",
+        "stylelint": "^14.5.1",
+        "stylelint-config-hive": "^1.0.0",
+        "stylelint-config-html": "^1.0.0",
+        "stylelint-config-standard": "^24.0.0",
+        "stylelint-config-standard-scss": "^3.0.0",
+        "stylelint-order": "^5.0.0",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.6.14",
+        "webpack": "^5.69.0",
+        "webpack-cli": "^4.9.2",
+        "webpack-dev-server": "^4.7.4"
     },
     "engines": {
         "node": ">=12"
